add logic for transactions, categories and transaction overview

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,6 +6,8 @@
     <li><a routerLink="/registration">Registration</a></li>
     <li><a routerLink="/incomes">Incomes</a></li>
     <li><a routerLink="/dashboard">Dashboard</a></li>
+    <li><a routerLink="/transaction">Transaction</a></li>
+    <li><a routerLink="/transaction-overview">TransactionOverview</a></li>
   </ul>
 </div>
 
