--- a/src/app/modules/transaction-overview/transaction-overview.component.scss
+++ b/src/app/modules/transaction-overview/transaction-overview.component.scss
@@ -1,46 +1,53 @@
 .table {
-	width: 100%;
-	border: none;
-	margin-bottom: 20px;
-	border-collapse: separate;
+  width: 100%;
+  border: none;
+  margin-bottom: 20px;
+  border-collapse: separate;
 }
 .table thead th {
-	font-weight: bold;
-	text-align: left;
-	border: none;
-	padding: 10px 15px;
-	background: #EDEDED;
-	font-size: 14px;
-	border-top: 1px solid #ddd;
+  font-weight: bold;
+  text-align: left;
+  border: none;
+  padding: 10px 15px;
+  background: #ededed;
+  font-size: 14px;
+  border-top: 1px solid #ddd;
 }
-.table tr th:first-child, .table tr td:first-child {
-	border-left: 1px solid #ddd;
+.table tr th:first-child,
+.table tr td:first-child {
+  border-left: 1px solid #ddd;
 }
-.table tr th:last-child, .table tr td:last-child {
-	border-right: 1px solid #ddd;
+.table tr th:last-child,
+.table tr td:last-child {
+  border-right: 1px solid #ddd;
 }
 .table thead tr th:first-child {
-	border-radius: 20px 0 0 0;
+  border-radius: 20px 0 0 0;
 }
 .table thead tr th:last-child {
-	border-radius: 0 20px 0 0;
+  border-radius: 0 20px 0 0;
 }
 .table tbody td {
-	text-align: left;
-	border: none;
-	padding: 10px 15px;
-	font-size: 14px;
-	vertical-align: top;
+  text-align: left;
+  border: none;
+  padding: 10px 15px;
+  font-size: 14px;
+  vertical-align: top;
 }
 .table tbody tr:nth-child(even) {
-	background: #F8F8F8;
+  background: #f8f8f8;
 }
-.table tbody tr:last-child td{
-	border-bottom: 1px solid #ddd;
+.table tbody tr:last-child td {
+  border-bottom: 1px solid #ddd;
 }
 .table tbody tr:last-child td:first-child {
-	border-radius: 0 0 0 20px;
+  border-radius: 0 0 0 20px;
 }
 .table tbody tr:last-child td:last-child {
-	border-radius: 0 0 20px 0;
+  border-radius: 0 0 20px 0;
+}
+
+.error-snackbar {
+  background-color: red; /* Example background color */
+  color: white; /* Example text color */
 }
