--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,17 +1,2 @@
-<!-- app.component.html -->
-
-<div class="navbar">
-  <ul>
-    <li><a routerLink="/login">Login</a></li>
-    <li><a routerLink="/registration">Registration</a></li>
-    <li><a routerLink="/incomes">Incomes</a></li>
-    <li><a routerLink="/dashboard">Dashboard</a></li>
-    <li><a routerLink="/transaction">Transaction</a></li>
-    <li><a routerLink="/transaction-overview">TransactionOverview</a></li>
-  </ul>
-</div>
-
-<!-- Logout Component (conditionally rendered) -->
-<app-logout *ngIf="isAuthenticated"></app-logout>
-
+<app-navbar></app-navbar>
 <router-outlet></router-outlet>
