--- a/src/app/modules/transaction-overview/transaction-overview.component.html
+++ b/src/app/modules/transaction-overview/transaction-overview.component.html
@@ -7,15 +7,14 @@
     <mat-form-field class="filter-field">
       <mat-label>Category</mat-label>
       <mat-select [formControl]="categoriesControl" (selectionChange)="applyFilters()">
-        <mat-option *ngFor="let category of categories" [value]="category.value">{{ category.value }}</mat-option>
+        <mat-option *ngFor="let category of categories" [value]="category.id">{{ category.value }}</mat-option>
       </mat-select>
     </mat-form-field>
 
     <mat-form-field class="filter-field">
       <mat-label>Transaction Type</mat-label>
       <mat-select [formControl]="transactionTypeControl" (selectionChange)="applyFilters()">
-        <mat-option value="income">Income</mat-option>
-        <mat-option value="expense">Expense</mat-option>
+        <mat-option *ngFor="let transactionType of transactionTypes" [value]="transactionType.id">{{ transactionType.type }}</mat-option>
       </mat-select>
     </mat-form-field>
 
@@ -37,45 +36,37 @@
     </mat-form-field>
   </div>
 
-
-  <table mat-table [dataSource]="dataSource" class="mat-elevation-z8 mat-table-responsive">
-    <ng-container matColumnDef="date">
-      <th mat-header-cell *matHeaderCellDef>Date</th>
-      <td mat-cell *matCellDef="let transaction">{{ transaction.date }}</td>
-    </ng-container>
-
-    <ng-container matColumnDef="description">
-      <th mat-header-cell *matHeaderCellDef>Description</th>
-      <td mat-cell *matCellDef="let transaction">{{ transaction.purpose }}</td>
-    </ng-container>
-
-    <ng-container matColumnDef="category">
-      <th mat-header-cell *matHeaderCellDef>Category</th>
-      <td mat-cell *matCellDef="let transaction">{{ transaction.categoryId }}</td>
-    </ng-container>
-
-    <ng-container matColumnDef="amount">
-      <th mat-header-cell *matHeaderCellDef>Amount</th>
-      <td mat-cell *matCellDef="let transaction">{{ transaction.amount }}</td>
-    </ng-container>
-
-    <!-- Add buttons for actions -->
-    <ng-container matColumnDef="actions">
-      <th mat-header-cell *matHeaderCellDef>Actions</th>
-      <td mat-cell *matCellDef="let transaction">
-        <button mat-icon-button color="primary" (click)="deleteTransaction(transaction.id)">
-          <mat-icon>delete</mat-icon>
-        </button>
-        <button mat-icon-button color="primary" (click)="viewTransaction(transaction.id)">
-          <mat-icon>visibility</mat-icon>
-        </button>
-      </td>
-    </ng-container>
-
-
-    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-    <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-  </table>
+  <div fxLayout="column" fxLayoutAlign="center center" class="transaction-container">
+    <mat-card>
+      <mat-card-header class="transaction-label">Transactions</mat-card-header>
+      <mat-card-content>
+        <form>
+          <div class="transaction-list">
+            <div *ngFor="let transaction of filteredTransactions" class="transaction-item">
+              <div class="transaction-date">{{ transaction.date | date:'dd.MM.yyyy' }}</div>
+              <div class="transaction-details">
+                <div class="transaction-category">{{ transaction.categoryId }}</div>
+                <div class="transaction-comment">{{ transaction.purpose }}</div>
+              </div>           
+              <div class="transaction-amount" [style.color]="getAmountColorByTransactionType(transaction.transactionTypeId)">
+                {{ getAmountWithSignAndColor(transaction.amount, transaction.transactionTypeId) }}
+              </div>
+              <div>
+                <button mat-icon-button color="primary" type="button" (click)="deleteTransaction(transaction.id)">
+                  <mat-icon>delete</mat-icon>
+                </button>  
+                <button mat-icon-button color="primary" type="button" (click)="editTransaction(transaction.id)">
+                  <mat-icon>edit</mat-icon>
+                </button>       
+              </div>
+            </div>
+          </div>
+        </form>
+      </mat-card-content>
+    </mat-card>     
+  </div>
+  
+  
 
   <!-- Last 3 Transactions -->
   <h2>Last 3 Transactions</h2>
