add transaction chart component

--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -10,6 +10,7 @@
           <a mat-button routerLink="/expenses">Expenses</a>
           <a mat-button routerLink="/transaction">Transaction</a>
           <a mat-button routerLink="/transaction-overview">Transaction Overview</a>
+          <a mat-button routerLink="/transaction-chart">Transaction Chart</a>
         </div>
       </div>
     </ng-container>
