--- a/src/app/modules/transaction-overview/transaction-overview.component.scss
+++ b/src/app/modules/transaction-overview/transaction-overview.component.scss
@@ -52,7 +52,6 @@
   color: white; /* Example text color */
 }
 
-
 /* transaction-overview.component.css */
 .mat-table-responsive {
   overflow-x: auto;
@@ -63,12 +62,12 @@
   width: 100%;
 }
 
-.mat-table th, .mat-table td {
+.mat-table th,
+.mat-table td {
   white-space: nowrap;
   overflow: hidden;
   text-overflow: ellipsis;
 }
-
 
 .container {
   margin: 20px;
@@ -126,63 +125,59 @@
 }
 
 .transaction-container {
-	margin: 20px;
-  }
-  
-  .transaction-label {
-	font-size: 24px;
-  }
-  
-  .transaction-list {
-	display: flex;
-	flex-direction: column;
-	gap: 10px;
-  }
-  
-  .transaction-item {
-	display: flex;
-	align-items: center;
-	border: 1px solid #ccc;
-	padding: 10px;
-	border-radius: 5px;
-  }
-  
-  .transaction-date {
-	flex: 2;
-	font-weight: bold;
-  }
-  
-  .transaction-details {
-	flex: 3;
-	display: flex;
-	flex-direction: column;
-	gap: 5px;
-  }
-  
-  .transaction-category {
-	font-weight: bold;
-  }
-  
-  .transaction-amount {
-    flex: 3;
-  }
+  margin: 20px;
+}
 
-  .transaction-amount span {
-    color: inherit; /* Наследовать цвет от родительского элемента */
-  }
-  
-  
-  .transaction-comment {
-	color: #666;
-  }
+.transaction-label {
+  font-size: 24px;
+}
 
-  .red {
-    color: red;
-  }
-  
-  .green {
-    color: green;
-  }
-  
-  
-  
+.transaction-list {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+}
+
+.transaction-item {
+  display: flex;
+  align-items: center;
+  border: 1px solid #ccc;
+  padding: 10px;
+  border-radius: 5px;
+}
+
+.transaction-date {
+  flex: 2;
+  font-weight: bold;
+}
+
+.transaction-details {
+  flex: 3;
+  display: flex;
+  flex-direction: column;
+  gap: 5px;
+}
+
+.transaction-category {
+  font-weight: bold;
+}
+
+.transaction-amount {
+  flex: 3;
+}
+
+.transaction-amount span {
+  color: inherit; /* Наследовать цвет от родительского элемента */
+}
+
+.transaction-comment {
+  color: #666;
+}
+
+.red {
+  color: red;
+}
+
+.green {
+  color: green;
+}
