add the first version for upload pdf files with transactions, create upload pdf component

--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -7,6 +7,7 @@
         <button mat-button [matMenuTriggerFor]="transactionMenu">Transactions</button>
         <mat-menu #transactionMenu="matMenu">
           <button mat-menu-item routerLink="/transaction">Create</button>
+          <button mat-menu-item routerLink="/upload">Upload</button>
           <button mat-menu-item routerLink="/transaction-overview">Overview</button>
           <button mat-menu-item routerLink="/transaction-chart">Chart</button>
         </mat-menu>
