--- a/src/app/modules/transaction-overview/transaction-overview.component.html
+++ b/src/app/modules/transaction-overview/transaction-overview.component.html
@@ -14,7 +14,8 @@
     <mat-form-field class="filter-field">
       <mat-label>Transaction Type</mat-label>
       <mat-select [formControl]="transactionTypeControl" (selectionChange)="applyFilters()">
-        <mat-option *ngFor="let transactionType of transactionTypes" [value]="transactionType.id">{{ transactionType.type }}</mat-option>
+        <mat-option *ngFor="let transactionType of transactionTypes" [value]="transactionType.id">{{
+          transactionType.type }}</mat-option>
       </mat-select>
     </mat-form-field>
 
@@ -42,31 +43,37 @@
       <mat-card-content>
         <form>
           <div class="transaction-list">
-            <div *ngFor="let transaction of filteredTransactions" class="transaction-item">
+            <div *ngFor="let transaction of filteredTransactions; let i = index" class="transaction-item">
+              <!-- Display the row counter with bold style -->
+              <div class="transaction-counter"><strong>{{ getRowNumber(i) }}</strong></div>
+              <!-- Add space to the next column -->
+              <div class="transaction-space"></div>
+              <!-- Other transaction details -->
               <div class="transaction-date">{{ transaction.date | date:'dd.MM.yyyy' }}</div>
               <div class="transaction-details">
                 <div class="transaction-category">{{ transaction.categoryId }}</div>
                 <div class="transaction-comment">{{ transaction.purpose }}</div>
-              </div>           
-              <div class="transaction-amount" [style.color]="getAmountColorByTransactionType(transaction.transactionTypeId)">
+              </div>
+              <div class="transaction-amount"
+                [style.color]="getAmountColorByTransactionType(transaction.transactionTypeId)">
                 {{ getAmountWithSignAndColor(transaction.amount, transaction.transactionTypeId) }}
               </div>
               <div>
                 <button mat-icon-button color="primary" type="button" (click)="deleteTransaction(transaction.id)">
                   <mat-icon>delete</mat-icon>
-                </button>  
+                </button>
                 <button mat-icon-button color="primary" type="button" (click)="editTransaction(transaction.id)">
                   <mat-icon>edit</mat-icon>
-                </button>       
+                </button>
               </div>
             </div>
           </div>
         </form>
       </mat-card-content>
-    </mat-card>     
+    </mat-card>
   </div>
-  
-  
+
+
 
   <!-- Last 3 Transactions -->
   <h2>Last 3 Transactions</h2>
