--- a/src/app/modules/transaction-overview/transaction-overview.component.scss
+++ b/src/app/modules/transaction-overview/transaction-overview.component.scss
@@ -181,3 +181,12 @@
 .green {
   color: green;
 }
+
+
+.transaction-counter {
+  font-weight: bold; /* Make the counter bold */
+}
+
+.transaction-space {
+  width: 20px; /* Add space to the next column */
+}
